--- a/ReimbursementApp/src/main/webapp/employee_view.html
+++ b/ReimbursementApp/src/main/webapp/employee_view.html
@@ -95,7 +95,10 @@
 
                     <label for="inputDescription" class="sr-only">Description</label>
                     <input type="text" name="description" id="description" class="form-control" placeholder="Description" required>
-
+		
+		            <label for="inputAmount" class="sr-only">Amount</label>
+                    <input type="text" name="amount" id="amount" class="form-control" placeholder="$0.00" required>
+				
                     <label for="inputComments" class="sr-only">Comments</label>
                     <textarea name="comments" id="comments" class="form-control" placeholder="Comments"></textarea>
                     
