--- a/ReimbursementApp/src/main/webapp/home.html
+++ b/ReimbursementApp/src/main/webapp/home.html
@@ -89,7 +89,7 @@
                 <h1>Reimbursements</h1>
                 <!-- <p class="lead">Jumbo helper text</p> -->
                 <!-- <p>More info</p> -->
-                <form class="form-signin text-center" action="EmployeeServlet" method="POST">
+                <form class="form-signin text-center" action="EmployeeServlet" enctype="multipart/form-data" method="POST">
                     <h1 class="h3 mb-3 font-weight-normal">Employee Sign In</h1>
 
                     <label for="inputEmail" class="sr-only">Email address</label>
